2007-07-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* complete.el (PC-do-complete-and-exit): Add support for the new
	`confirm-only' confirmation mode.

2007-07-05  Chong Yidong  <cyd@stupidchicken.com>

	* cus-edit.el (custom-commands): New variable.
	(custom-tool-bar-map): New variable.  Initialize using
	`custom-commands'.
	(custom-mode): Use `custom-tool-bar-map'.
	(custom-buffer-create-internal): Insert action buttons only if
	tool bar is not used.  Use `custom-commands'.
	(Custom-help, custom-command-apply): New function.
	(custom-command-apply, Custom-set, Custom-save)
	(Custom-reset-current, Custom-reset-saved, Custom-reset-standard):
	Use `custom-command-apply' instead of duplicating code.
	(customize-group-other-window): Call `customize-group' instead of
	duplicating code.
	(customize-face-other-window): Call `customize-face' instead of
	duplicating code.
	(customize-group, customize-face): Add optional args for opening
	in another window.
	(custom-variable-tag): Don't inherit `variable-pitch' face.
	(custom-group-tag): Inherit `variable-pitch' face.
	(custom-variable-value-create): Set documentation indentation.
	(custom-group-value-create): Make group name a link, instead of
	using an extra "go to group" button.
	(custom-prompt-variable, custom-group-set, custom-group-save)
	(custom-group-reset-current, custom-group-reset-saved)
	(custom-group-reset-standard): Minor cleanup.

2007-07-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* Makefile.in (bootstrap-prepare): When copying from
	ldefs-boot.el, make sure loaddefs.el is writeable.

2007-07-05  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hg.el (vc-hg-internal-status): Inline in `vc-hg-state', the
	only caller, and delete.
	(vc-hg-state): Deal with exceptions and only parse the output on
	successful return.
	(vc-hg-internal-log): Inline in `vc-hg-workfile-version', the only
	caller, and delete.
	(vc-hg-workfile-version): Deal with exceptions and only parse the
	output on successful return.