@@ -1,3 +1,9 @@
+2007-07-05  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-hooks.el (vc-handled-backends): Add HG.
+
+	* vc-hg.el (vc-handled-backends): Remove, done in vc-hooks.el now.
+
 2007-07-05  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* complete.el (PC-do-complete-and-exit): Add support for the new
